# espnow-mqtt-gateway

./: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig.defaults
.devcontainer/: Dockerfile  devcontainer.json
components/esp_time/: CMakeLists.txt  Kconfig.projbuild  component.mk  esp_time.h  sntp.c  time_tools.c
components/ethernet_module/: CMakeLists.txt  Kconfig.projbuild  ethernet_module.c  ethernet_module.h
main/: CMakeLists.txt  Kconfig.projbuild  device_info_collector.c  device_info_collector.h  esp-now-communication.c  esp-now-communication.h  ethernet_events.c  ethernet_events.h  flash_filesystem.c  flash_filesystem.h  gateway_device_list.c  gateway_device_list.h  gateway_logic.c  gateway_logic.h  main.c  mqtt.c  mqtt.h  network_status.c  network_status.h  old_server_client.c  old_server_client.h  settings.c  settings.h  settings_page.c  settings_page.h  url_utils.c  url_utils.h  webserver.c  webserver.h
main/web/: index.html  settings.html  styles.css
